<resources>
    <string name="app_name">CheapEats</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Reset Password</string>
    <string name="remove_user">Delete Account</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Register For Cheap Eats Now!</string>
    <string name="btn_link_to_login">Already registered? Log In!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="back_button_dude">BACK</string>
    <string name="prompt_password">Enter a new password</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="title_activity_post_browsing">PostBrowsingActivity</string>
    <string-array name="filters">
        <item>Latin</item>
        <item>Pub Food</item>
        <item>Happy Hour</item>
        <item>Student Organized</item>
        <item>Sandwiches</item>
        <item>American</item>
        <item>BBQ</item>
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Dessert</item>
        <item>Salads</item>
        <item>Asian</item>
        <item>Pizza</item>
        <item>Hamburgers</item>
        <item>Pasta</item>
        <item>Healthy</item>
        <item>Italian</item>
        <item>Diet Nutrition</item>
        <item>Vegetarian</item>
        <item>Vegan</item>
        <item>Halal</item>
        <item>Gluten Free</item>
        <item>Organic</item>
        <item>Low-fat</item>
        <item>Low-carb</item>
        <item>Kosher</item>
    </string-array>
    <string-array name="sortbys">
        <item>Title</item>
        <item>Description</item>
        <item>Clout</item>
        <item>Amount of Tags</item>
        <item>Host</item>
    </string-array>
    <string name="event_host">Event Host</string>
    <string name="hello">Latin</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_view_post">ViewPostActivity</string>
</resources>
